# ara_libs

./: CMakeLists copy.txt  CMakeLists.txt  README.md  cmake_uninstall.cmake.in
example/: CMakeLists.txt  main.cpp
example/application/: extended_vehicle.cpp  extended_vehicle.h
example/application/doip/: doip_client.h  doip_server.h  obd_to_doip_converter.cpp
example/application/helper/: network_configuration.h
example/application/platform/: diagnostic_manager.cpp  execution_management.cpp  execution_management.h
examples/: CMakeLists.txt
examples/application/doip/: diag_message_handler.h
examples/application/helper/: fifo_checkpoint_communicator.cpp  fifo_checkpoint_communicator.h  log_recovery_action.h  read_data_by_identifier.cpp  read_data_by_identifier.h
examples/application/platform/: diagnostic_manager.cpp  diagnostic_manager.h  platform_health_management.h  state_management.cpp  state_management.h
libs/ara/com/: CMakeLists.txt
libs/ara/core/: CMakeLists.txt
libs/ara/diag/: CMakeLists.txt
libs/ara/exec/: CMakeLists.txt
libs/ara/log/: CMakeLists.txt
libs/ara/phm/: CMakeLists.txt
libs/ara/sm/: CMakeLists.txt
libs/arxml/: CMakeLists.txt
src/application/: CMakeLists.txt
src/ara/com/: CMakeLists.txt
src/ara/core/: CMakeLists.txt
src/ara/diag/: CMakeLists.txt
src/ara/exec/: CMakeLists.txt
src/ara/log/: CMakeLists.txt
src/ara/phm/: CMakeLists.txt
src/ara/sm/: CMakeLists.txt
