add_executable(
  adaptive_autosar
  ${source_dir}/main.cpp
  ${source_application_dir}/extended_vehicle.h
  ${source_application_dir}/extended_vehicle.cpp
  ${source_application_helper_dir}/argument_configuration.h
  ${source_application_helper_dir}/argument_configuration.cpp
  ${source_application_helper_dir}/curl_wrapper.h
  ${source_application_helper_dir}/curl_wrapper.cpp
  ${source_application_helper_dir}/network_configuration.h
  ${source_application_helper_dir}/network_configuration.cpp
  ${source_application_helper_dir}/rpc_configuration.h
  ${source_application_helper_dir}/rpc_configuration.cpp
  ${source_application_helper_dir}/read_data_by_identifier.h
  ${source_application_helper_dir}/read_data_by_identifier.cpp
  ${source_application_helper_dir}/memory_cache.h
  ${source_application_helper_dir}/log_recovery_action.h
  ${source_application_helper_dir}/log_recovery_action.cpp
  ${source_application_helper_dir}/fifo_checkpoint_communicator.h
  ${source_application_helper_dir}/fifo_checkpoint_communicator.cpp
  ${source_application_doip_dir}/vehicle_id_request_handler.h
  ${source_application_doip_dir}/vehicle_id_request_handler.cpp
  ${source_application_doip_dir}/diag_message_handler.h
  ${source_application_doip_dir}/diag_message_handler.cpp
  ${source_application_doip_dir}/doip_server.h
  ${source_application_doip_dir}/doip_server.cpp
  ${source_application_doip_dir}/doip_client.h
  ${source_application_doip_dir}/doip_client.cpp
  ${source_application_doip_dir}/obd_to_doip_converter.h
  ${source_application_doip_dir}/obd_to_doip_converter.cpp
  ${source_application_platform_dir}/state_management.h
  ${source_application_platform_dir}/state_management.cpp
  ${source_application_platform_dir}/execution_management.h
  ${source_application_platform_dir}/execution_management.cpp
  ${source_application_platform_dir}/diagnostic_manager.h
  ${source_application_platform_dir}/diagnostic_manager.cpp
  ${source_application_platform_dir}/platform_health_management.h
  ${source_application_platform_dir}/platform_health_management.cpp
)