cmake_minimum_required(VERSION 3.14)
project(ara_com)

# Add include directories for Async-BSD-Socket-Lib
include_directories(${async-bsd-socket-lib_SOURCE_DIR}/include)

add_library(
  ara_com
  ${CMAKE_SOURCE_DIR}/libs/ara/com/cg/communication_group_client.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/cg/communication_group_server.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/e2e/profile11.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/e2e/profile11.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/helper/payload_helper.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/helper/payload_helper.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/helper/ipv4_address.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/helper/ipv4_address.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/helper/abstract_state_machine.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/helper/machine_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/helper/finite_state_machine.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/helper/ttl_timer.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/helper/ttl_timer.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/helper/network_layer.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/helper/concurrent_queue.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/entry/entry.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/entry/entry.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/entry/eventgroup_entry.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/entry/eventgroup_entry.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/entry/service_entry.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/entry/service_entry.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/entry/entry_deserializer.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/entry/entry_deserializer.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/option/option.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/option/option.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/option/ipv4_endpoint_option.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/option/ipv4_endpoint_option.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/option/loadbalancing_option.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/option/loadbalancing_option.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/option/option_deserializer.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/option/option_deserializer.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/someip_message.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/someip_message.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/rpc/someip_rpc_message.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/rpc/someip_rpc_message.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/rpc/rpc_server.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/rpc/rpc_server.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/rpc/socket_rpc_server.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/rpc/socket_rpc_server.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/rpc/rpc_client.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/rpc/rpc_client.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/rpc/socket_rpc_client.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/rpc/socket_rpc_client.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/pubsub/someip_pubsub_server.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/pubsub/someip_pubsub_server.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/pubsub/someip_pubsub_client.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/pubsub/someip_pubsub_client.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/pubsub/fsm/service_down_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/pubsub/fsm/service_down_state.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/pubsub/fsm/notsubscribed_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/pubsub/fsm/notsubscribed_state.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/pubsub/fsm/subscribed_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/pubsub/fsm/subscribed_state.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/someip_sd_agent.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/someip_sd_message.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/someip_sd_message.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/someip_sd_server.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/someip_sd_server.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/someip_sd_client.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/someip_sd_client.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/sd_network_layer.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/sd_network_layer.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/timer_set_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/client_service_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/notready_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/notready_state.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/initial_wait_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/client_initial_wait_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/client_initial_wait_state.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/repetition_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/client_repetition_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/client_repetition_state.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/main_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/main_state.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/stopped_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/stopped_state.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/service_notseen_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/service_notseen_state.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/service_ready_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/service_ready_state.cpp
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/service_seen_state.h
  ${CMAKE_SOURCE_DIR}/libs/ara/com/someip/sd/fsm/service_seen_state.cpp
)
