cmake_minimum_required(VERSION 3.14)
project(ara_diag)

add_library(
  ara_diag 
  ${CMAKE_SOURCE_DIR}/src/ara/diag/meta_info.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/meta_info.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/cancellation_handler.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/cancellation_handler.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/event.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/event.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/dtc_information.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/dtc_information.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/condition.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/condition.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/operation_cycle.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/operation_cycle.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/conversation.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/conversation.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/diag_error_domain.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/diag_error_domain.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/generic_uds_service.h
  # ${CMAKE_SOURCE_DIR}/src/ara/diag/generic_uds_service.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/security_access.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/security_access.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/download.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/download.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/upload.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/upload.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/ecu_reset_request.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/ecu_reset_request.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/generic_routine.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/generic_routine.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/monitor.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/monitor.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/routable_uds_service.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/routable_uds_service.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/uds_service_router.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/uds_service_router.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/delay_timer.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/delay_timer.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/transfer_data.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/transfer_data.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/request_transfer_exit.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/request_transfer_exit.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/nrc_exception.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/nrc_exception.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/request_transfer.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/routing/request_transfer.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/debouncing/debouncer.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/debouncing/debouncer.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/debouncing/counter_based_debouncer.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/debouncing/counter_based_debouncer.cpp
  ${CMAKE_SOURCE_DIR}/src/ara/diag/debouncing/timer_based_debouncer.h
  ${CMAKE_SOURCE_DIR}/src/ara/diag/debouncing/timer_based_debouncer.cpp
)
